--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
     "@babel/register": "^7.25.9",
+    "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.8.1",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
