--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
     "bcrypt": "^5.1.1",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "multer": "^1.4.5-lts.2"
   }
 }
